# NetX

./: .gitignore  Cargo.toml  singbox  tui
.cargo/: config.toml
config/: config.json.template
crates/netx/: Cargo.toml
crates/netx-config/: Cargo.toml
crates/netx-core/: Cargo.toml
crates/netx-ctl/: Cargo.toml
crates/netx-daemon/: Cargo.toml
crates/netx-ipc/: Cargo.toml
crates/netx/src/: main.rs
src/: config.rs  lib.rs  tray.rs
