[package]
name = "netx"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
tray-icon = "0.21.2"
url = "2.5.7"
urlencoding = "2.1.3"


[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.21.5"
libc = "0.2.178"
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.61.2"
