[workspace]
resolver = "2"
members = [
    "crates/netx-daemon",
    "crates/netx",
    "crates/netx-ctl",
    "crates/netx-core",
    "crates/netx-ipc",
    "crates/netx-config",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92.0"
authors = ["Arseny Artemyev"]
license = "MIT"
repository = "https://github.com/tmp-000000/NetX"
homepage = "https://github.com/tmp-000000/NetX"
keywords = ["vpn", "proxy", "sing-box", "tun"]
categories = ["network-programming", "command-line-utilities"]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
strip = "symbols"

[profile.dev-fast]
inherits = "dev"
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
