[package]
name = "netx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
description = "General logic and data types for NetX"

[lib]
name = "netx_core"
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
