[package]
name = "netx-ctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
description = "CLI utility for managing NetX"

[[bin]]
name = "netx-ctl"
path = "src/main.rs"

[dependencies]
netx-core = { path = "../netx-core" }
netx-ipc = { path = "../netx-ipc" }

[lints]
workspace = true
