[package]
name = "netx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]
description = "NetX Application UI (Tray + TUI)"

[[bin]]
name = "netx"
path = "src/main.rs"

[dependencies]
netx-core = { path = "../netx-core" }
netx-ipc = { path = "../netx-ipc" }
netx-config = { path = "../netx-config" }

[features]
default = ["tray", "tui"]
tray = []
tui = []

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[lints]
workspace = true
